--- a/Translation/UI.json
+++ b/Translation/UI.json
@@ -2234,7 +2234,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Bán Đồ Thường",
         "ar":"",
         "it":"",
         "pl":"",
@@ -4477,7 +4477,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Tuyên Bố Đại Chiến",
         "ar":"",
         "it":"",
         "pl":"",
@@ -4496,7 +4496,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Tuyên bố chiến tranh với <i>{0}</i> sẽ tiêu tốn {1} vàng trong công hội. Cảnh báo, khi chiến tranh nổ ra, không gì có thể ngăn lại. Đại chiến sẽ diễn ra trong vòng {2} ngày. Sau khi khai chiến, bạn sẽ phải đợi thêm {3} ngày trước khi có thể tuyên chiến với cùng một công hội đó.",
         "ar":"",
         "it":"",
         "pl":"",
@@ -4515,7 +4515,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Công Hội Tấn Công",
         "ar":"",
         "it":"",
         "pl":"",
@@ -4534,7 +4534,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Điểm Tấn Công",
         "ar":"",
         "it":"",
         "pl":"",
@@ -4553,7 +4553,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Điểm Phòng Thủ",
         "ar":"",
         "it":"",
         "pl":"",
@@ -4572,7 +4572,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Công Hội Phòng Thủ",
         "ar":"",
         "it":"",
         "pl":"",
@@ -4591,7 +4591,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Thời Gian Còn Lại",
         "ar":"",
         "it":"",
         "pl":"",
@@ -4610,7 +4610,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"vs",
         "ar":"",
         "it":"",
         "pl":"",
