--- a/Translation/skills.json
+++ b/Translation/skills.json
@@ -68,7 +68,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Ném một hỏa cầu nhỏ vào mục tiêu",
         "ar":"",
         "it":"",
         "pl":"",
@@ -87,7 +87,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Bắn một mũi tên vào mục tiêu",
         "ar":"",
         "it":"",
         "pl":"",
@@ -106,7 +106,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Chém kiếm của bạn vào mục tiêu",
         "ar":"",
         "it":"",
         "pl":"",
