--- a/Translation/event.json
+++ b/Translation/event.json
@@ -321,5 +321,63 @@
         "pl":"",
         "th":"",
         "id":""
+    },
+    
+    "event.TEMP_FFA.title":{
+        "en":"(Temporary) Free For All",
+        "fr":"(Temporaire) Chacun Pour Soi",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "event.TEMP_FFA.description-1":{
+        "en":"You get sent to an alternate version of <i>Lava Core</i> where everyone can fight, no matter the groups or guilds",
+        "fr":"Vous êtes envoyé dans une version alternative de <i>Coeur de Lave</i> où tout le monde peut se battre, quels que soient les groupes ou les guildes.",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "event.TEMP_FFA.description-2":{
+        "en":"Time: All Day",
+        "fr":"Horaires: Toute la journée",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
     }
 }
