--- a/Translation/event.json
+++ b/Translation/event.json
@@ -152,8 +152,8 @@
         "id":"Respawn rate Lava Core lebih cepat"
     },
     "event.LAVA_CORE.description-2":{
-        "en":"Time: 10:00-11:00 18:00-19:00 (Server Time)",
-        "fr":"Horaires: 10:00-11:00 18:00-19:00 (Heure du Serveur)",
+        "en":"Time:<br>00:00-01:00 06:00-07:00 10:00-11:00 18:00-19:00 (Server Time)",
+        "fr":"Horaires:<br>00:00-01:00 06:00-07:00 10:00-11:00 18:00-19:00 (Heure du Serveur)",
         "es":"Horarios: 11:00-12:00 19:00-20:00 (GMT+1)",
         "zh-cn":"时间: 18:00-19:00 02:00-03:00 (GMT+8)",
         "zh-tw":"",
@@ -163,7 +163,7 @@
         "de":"Zeiten: 11:00-12:00 19:00-20:00 (GMT+1)",
         "jp":"19:00-20:00 03:00-04:00 (GMT+9)",
         "pt":"10:00-11:00 18:00-19:00 (GMT+0)",
-        "vi":"Thời Gian: 15:00-16:00 23:00-00:00 (GMT+7 Việt Nam)",
+        "vi":"Thời Gian: 05:00-06:00 11:00-12:00 15:00-16:00 23:00-00:00 (GMT+7 Việt Nam)",
         "ar":"04:00-05:00 12:00-13:00 (GMT-6)",
         "it":"09:00-10:00 17:00-18:00 (GMT-1)",
         "pl":"11:00-12:00 19:00-20:00 (GMT+1)",
