--- a/Translation/UI.json
+++ b/Translation/UI.json
@@ -4629,7 +4629,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Tên Công Hội",
         "ar":"",
         "it":"",
         "pl":"",
@@ -4648,7 +4648,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Các công hội đề xuất liên minh",
         "ar":"",
         "it":"",
         "pl":"",
@@ -4667,7 +4667,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Đề xuất liên minh gửi tới các công hội",
         "ar":"",
         "it":"",
         "pl":"",
@@ -4686,7 +4686,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Công hội đồng minh",
         "ar":"",
         "it":"",
         "pl":"",
@@ -4705,7 +4705,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Chấp thuận",
         "ar":"",
         "it":"",
         "pl":"",
@@ -4724,7 +4724,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Từ chối",
         "ar":"",
         "it":"",
         "pl":"",
@@ -4743,7 +4743,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Bác bỏ đề xuất",
         "ar":"",
         "it":"",
         "pl":"",
@@ -4762,7 +4762,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Phá vỡ liên minh",
         "ar":"",
         "it":"",
         "pl":"",
