--- a/Translation/event.json
+++ b/Translation/event.json
@@ -335,7 +335,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"(Tạm Thời) Miễn Phí Cho Tất Cả",
         "ar":"",
         "it":"",
         "pl":"",
@@ -354,7 +354,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Bạn sẽ được dịch chuyển đến một thế giới <i>Lõi Dung Nham</i> song song nơi mà mọi người có thể chiến đấu, kể cả trong tổ đội hay công hội.",
         "ar":"",
         "it":"",
         "pl":"",
@@ -373,7 +373,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Thời gian: Cả Ngày",
         "ar":"",
         "it":"",
         "pl":"",
