--- a/Translation/UI.json
+++ b/Translation/UI.json
@@ -2226,7 +2226,7 @@
         "en":"Sell Common Gears",
         "fr":"Vendre l'Equip. Commun",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"出售普通装备",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -4469,7 +4469,7 @@
         "en":"Declare War",
         "fr":"Déclarer la Guerre",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"宣战",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -4488,7 +4488,7 @@
         "en":"Declaring a war to <i>{0}</i> will cost {1} gold to the guild. Warning, once a war is started, it can't be stopped. The war will go on for {2} days. Once you started a war, you have to wait {3} days before starting a new war against the same guild.",
         "fr":"Déclarer une guerre à <i>{0}</i> va couter {1} or a la guilde. Attention, une fois démarrée, elle ne pourra pas être arrêtée. La guerre durera {2} jours. Une fois la guerre déclanché, vous devrez attendre {3} jours avant de pouvoir en démarrer une nouvelle avec la même guilde.",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"使用 {1} 公会金币向 <i>{0}</i> 公会宣战。警告，战争一旦开始，就无法停止。战争将持续 {2} 天。一旦您发动了战争，您必须等待 {3} 天才能对同一公会发动新的战争。",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -4507,7 +4507,7 @@
         "en":"Attack Guild",
         "fr":"Guilde Attaque",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"攻击公会",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -4526,7 +4526,7 @@
         "en":"Attack Score",
         "fr":"Score Attaque",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"攻击得分",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -4545,7 +4545,7 @@
         "en":"Defense Score",
         "fr":"Score Défense",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"防御得分",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -4564,7 +4564,7 @@
         "en":"Defense Guild",
         "fr":"Guilde Défense",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"防御公会",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -4583,7 +4583,7 @@
         "en":"Time Left",
         "fr":"Temps Restant",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"剩余时间",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -4602,7 +4602,7 @@
         "en":"vs",
         "fr":"vs",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"vs",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -4621,7 +4621,7 @@
         "en":"Guild Name",
         "fr":"Nom de la Guilde",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"公会名",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -4640,7 +4640,7 @@
         "en":"Guilds asking for an alliance",
         "fr":"Guildes demandant une alliance",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"请求结盟的公会",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -4659,7 +4659,7 @@
         "en":"Alliances asked to other guilds",
         "fr":"Alliances demandées à d'autres guildes",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"向其他公会提出结盟",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -4678,7 +4678,7 @@
         "en":"Allied guilds",
         "fr":"Guildes alliées",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"联盟公会",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -4697,7 +4697,7 @@
         "en":"Accect",
         "fr":"Accepter",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"同意",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -4716,7 +4716,7 @@
         "en":"Decline",
         "fr":"Refuser",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"谢绝",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -4735,7 +4735,7 @@
         "en":"Cancel the invitation",
         "fr":"Annuler l'invitation",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"取消邀请",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -4754,7 +4754,7 @@
         "en":"Break the alliance",
         "fr":"Rompre l'alliance",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"背弃联盟",
         "zh-tw":"",
         "kr":"",
         "ru":"",
