--- a/Translation/event.json
+++ b/Translation/event.json
@@ -327,7 +327,7 @@
         "en":"(Temporary) Free For All",
         "fr":"(Temporaire) Chacun Pour Soi",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"（限时）免费",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -343,10 +343,10 @@
         "id":""
     },
     "event.TEMP_FFA.description-1":{
-        "en":"You get sent to an alternate version of <i>Lava Core</i> where everyone can fight, no matter the groups or guilds",
+        "en":"You get sent to an alternate version of <i>Lava Core</i> where everyone can fight, no matter the groups or guilds.",
         "fr":"Vous êtes envoyé dans une version alternative de <i>Coeur de Lave</i> où tout le monde peut se battre, quels que soient les groupes ou les guildes.",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"您会被传送到另一个版本的<i>熔岩核心</i>，在那里每个人都可以随意战斗，无论组队或公会.",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -365,7 +365,7 @@
         "en":"Time: All Day",
         "fr":"Horaires: Toute la journée",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"时间：全天",
         "zh-tw":"",
         "kr":"",
         "ru":"",
