--- a/Translation/skills.json
+++ b/Translation/skills.json
@@ -5722,7 +5722,7 @@
         "en": "Increases target's max HP by 4000 and Enhanced Damage by 15%. Lasts 1 hour.",
         "fr": "Augmente les PV max de la cible de 4000 et Dégâts Améliorés de 15%. Dure 1 heure.",
         "es": "",
-        "zh-cn": "生命上限+4000,伤害增强+15%",
+        "zh-cn": "生命上限+4000,伤害增强+15%. 持续1小时. ",
         "zh-tw":"",
         "kr": "",
         "ru": "",
