Instance 50 map's name

--- a/Translation/map.json
+++ b/Translation/map.json
@@ -2222,6 +2222,63 @@
         "th":"",
         "id":""
     },
+    "map.Instance_50_map1.name":{
+        "en":"The Maze",
+        "fr":"Le Labyrinthe",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "map.Instance_50_map2.name":{
+        "en":"Underground Passage",
+        "fr":"Passage souterrain",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "map.Instance_50_map3.name":{
+        "en":"Queen Gaia's Lair",
+        "fr":"Repaire de la Reine Gaia",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
     "map.S_Slime_Kingdom.name":{
         "en":"Slime Kingdom",
         "fr":"Royaume des Slime",
