--- a/Translation/map.json
+++ b/Translation/map.json
@@ -2226,7 +2226,7 @@
         "en":"The Maze",
         "fr":"Le Labyrinthe",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"迷宫",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -2245,7 +2245,7 @@
         "en":"Underground Passage",
         "fr":"Passage souterrain",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"地下通道",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -2264,7 +2264,7 @@
         "en":"Queen Gaia's Lair",
         "fr":"Repaire de la Reine Gaia",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"盖娅女王的巢穴",
         "zh-tw":"",
         "kr":"",
         "ru":"",
