--- a/Translation/map.json
+++ b/Translation/map.json
@@ -2316,5 +2316,100 @@
         "pl":"",
         "th":"",
         "id":"Molten Arena"
+    },
+    "map.SE_Battlefield_SpawnA.name":{
+        "en":"Battlefield - Blue Team",
+        "fr":"Champ de bataille - Equipe Bleu",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "map.SE_Battlefield_SpawnB.name":{
+        "en":"Battlefield - Red Team",
+        "fr":"Champ de bataille - Equipe Rouge",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "map.SE_Battlefield.name":{
+        "en":"Battlefield",
+        "fr":"Champ de bataille",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "map.SE_Masquerade.name":{
+        "en":"Masquerade",
+        "fr":"Mascarade",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "map.SE_Wherewolf.name":{
+        "en":"Werewolf Hunting Ground",
+        "fr":"Terrain de chasse des loups-garous",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
     }
 }
