--- a/Translation/map.json
+++ b/Translation/map.json
@@ -2375,8 +2375,8 @@
         "id":""
     },
     "map.SE_Masquerade.name":{
-        "en":"Masquerade",
-        "fr":"Mascarade",
+        "en":"Rasyna's Manor",
+        "fr":"Manoir de Rasyna",
         "es":"",
         "zh-cn":"",
         "zh-tw":"",
