--- a/Translation/item.json
+++ b/Translation/item.json
@@ -20138,6 +20138,25 @@
         "th":"",
         "id":""
     },
+    "item.20021.name":{
+        "en":"Major purity potion",
+        "fr":"Potion de Pureté Majeure",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
     "item.21008.name":{
         "en":"Red Soul",
         "fr":"Âme Rouge",
