--- a/Translation/item.json
+++ b/Translation/item.json
@@ -22343,8 +22343,8 @@
         "id":""
     },
     "item.41030.name":{
-        "en":"Spirit Book Refining Stone",
-        "fr":"Gemme de rafinnage de livre d'esprit",
+        "en":"Spirit Gem",
+        "fr":"Gemme d'esprit",
         "es":"",
         "zh-cn":"",
         "zh-tw":"",
