--- a/Translation/item.json
+++ b/Translation/item.json
@@ -22344,7 +22344,7 @@
     },
     "item.41030.name":{
         "en":"Spirit Gem",
-        "fr":"Gemme d'esprit",
+        "fr":"Gemme d'Esprit",
         "es":"",
         "zh-cn":"",
         "zh-tw":"",
