--- a/Translation/event.json
+++ b/Translation/event.json
@@ -170,6 +170,63 @@
         "th":"17:00-18:00 01:00-02:00 (GMT+7)",
         "id":"03:00-04:00 11:00-12:00 (GMT-7)"
     },
+    "event.MASQUERADE.title":{
+        "en":"Masquerade",
+        "fr":"Mascarade",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "event.MASQUERADE.description-1":{
+        "en":"EXP, Celebeam, Gold, Token",
+        "fr":"EXP, Celebeam, Or, Jeton",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "event.MASQUERADE.description-2":{
+        "en":"Time (Server): 01:30-01:50 05:30-05:50<br>09:30-09:50 13:30-13:50<br>17:30-17:50 21:30-21:50",
+        "fr":"Horaires(Serveur): 01:30-01:50 05:30-05:50<br>09:30-09:50 13:30-13:50<br>17:30-17:50 21:30-21:50",
+        "es":"Horarios(Serveur): 01:30-01:50 05:30-05:50<br>09:30-09:50 13:30-13:50<br>17:30-17:50 21:30-21:50",
+        "zh-cn":"时间(服务器) : 01:30-01:50 05:30-05:50<br>09:30-09:50 13:30-13:50<br>17:30-17:50 21:30-21:50",
+        "zh-tw":"",
+        "kr":"01:30-01:50 05:30-05:50<br>09:30-09:50 13:30-13:50<br>17:30-17:50 21:30-21:50 (Serveur)",
+        "ru":"01:30-01:50 05:30-05:50<br>09:30-09:50 13:30-13:50<br>17:30-17:50 21:30-21:50 (Serveur)",
+        "tr":"01:30-01:50 05:30-05:50<br>09:30-09:50 13:30-13:50<br>17:30-17:50 21:30-21:50 (Serveur)",
+        "de":"Zeiten: 01:30-01:50 05:30-05:50<br>09:30-09:50 13:30-13:50<br>17:30-17:50 21:30-21:50 (Serveur)",
+        "jp":"01:30-01:50 05:30-05:50<br>09:30-09:50 13:30-13:50<br>17:30-17:50 21:30-21:50 (Serveur)",
+        "pt":"01:30-01:50 05:30-05:50<br>09:30-09:50 13:30-13:50<br>17:30-17:50 21:30-21:50 (Serveur)",
+        "vi":"Thời Gian (VN): 06:30-06:50 10:30-10:50<br>14:30-14:50 18:30-18:50<br>22:30-22:50 02:30-02:50",
+        "ar":"01:30-01:50 05:30-05:50<br>09:30-09:50 13:30-13:50<br>17:30-17:50 21:30-21:50 (Serveur)",
+        "it":"01:30-01:50 05:30-05:50<br>09:30-09:50 13:30-13:50<br>17:30-17:50 21:30-21:50 (Serveur)",
+        "pl":"01:30-01:50 05:30-05:50<br>09:30-09:50 13:30-13:50<br>17:30-17:50 21:30-21:50 (Serveur)",
+        "th":"01:30-01:50 05:30-05:50<br>09:30-09:50 13:30-13:50<br>17:30-17:50 21:30-21:50 (Serveur)",
+        "id":"00:30-01:00 04:30-05:00<br>08:30-09:00 12:30-13:00<br>16:30-17:00 20:30-21:00 (Serveur)"
+    },
     "event.BATTLEFIELD.title":{
         "en":"Battlefield",
         "fr":"Champ de bataille",
@@ -191,7 +248,7 @@
     },
     "event.BATTLEFIELD.description-1":{
         "en":"EXP, Token",
-        "fr":"EXP, Coupon",
+        "fr":"EXP, Jeton",
         "es":"",
         "zh-cn":"经验, 代币",
         "zh-tw":"",
