--- a/Translation/general.json
+++ b/Translation/general.json
@@ -77,7 +77,7 @@
     },
     "general.CURRENCY.TOKEN":{
         "en":"Token",
-        "fr":"Coupon",
+        "fr":"Jeton",
         "es":"Token",
         "zh-cn":"魔能",
         "zh-tw":"",
