added Simplified Chinese
added Simplified Chinese

--- a/Translation/UI.json
+++ b/Translation/UI.json
@@ -5058,7 +5058,7 @@
         "en":"Reroll",
         "fr":"Regénérer",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"重掷",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -5362,7 +5362,7 @@
         "en":"Rerolling this spirit's book will consume {0} <i class='inline-item item-icon-41031'></i> Spirit Gem. Continue?",
         "fr":"Regénérer ce livre de l'esprit consommera {0} <i class='inline-item item-icon-41031'></i> Gemme d'Esprit. Continuer?",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"重掷此精灵书需要 {0} <i class='inline-item item-icon-41031'></i> 精灵宝石. 继续?",
         "zh-tw":"",
         "kr":"",
         "ru":"",
