--- a/Translation/event.json
+++ b/Translation/event.json
@@ -174,7 +174,7 @@
         "en":"Masquerade",
         "fr":"Mascarade",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"假面舞会",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -193,7 +193,7 @@
         "en":"EXP, Celebeam, Gold, Token",
         "fr":"EXP, Celebeam, Or, Jeton",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"EXP, 魔晶, 金钱, 代币",
         "zh-tw":"",
         "kr":"",
         "ru":"",
