--- a/Translation/instance.json
+++ b/Translation/instance.json
@@ -592,7 +592,7 @@
         "en": "Infected Forest",
         "fr": "Forêt Infectée",
         "es": "",
-        "zh-cn": "",
+        "zh-cn": "感染森林",
         "zh-tw": "",
         "kr": "",
         "ru": "",
