--- a/Translation/item.json
+++ b/Translation/item.json
@@ -20142,7 +20142,7 @@
         "en":"Major purity potion",
         "fr":"Potion de Pureté Majeure",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"极效净化药水",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -22346,7 +22346,7 @@
         "en":"Spirit Gem",
         "fr":"Gemme d'Esprit",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"精灵宝石",
         "zh-tw":"",
         "kr":"",
         "ru":"",
