--- a/Translation/map.json
+++ b/Translation/map.json
@@ -2321,7 +2321,7 @@
         "en":"Battlefield - Blue Team",
         "fr":"Champ de bataille - Equipe Bleu",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"战场 - 蓝队",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -2340,7 +2340,7 @@
         "en":"Battlefield - Red Team",
         "fr":"Champ de bataille - Equipe Rouge",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"战场 - 红队",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -2359,7 +2359,7 @@
         "en":"Battlefield",
         "fr":"Champ de bataille",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"战场",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -2378,7 +2378,7 @@
         "en":"Rasyna's Manor",
         "fr":"Manoir de Rasyna",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"拉塞纳庄园",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -2397,7 +2397,7 @@
         "en":"Werewolf Hunting Ground",
         "fr":"Terrain de chasse des loups-garous",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"狼人狩猎场",
         "zh-tw":"",
         "kr":"",
         "ru":"",
