--- a/Translation/map.json
+++ b/Translation/map.json
@@ -2393,7 +2393,7 @@
         "th":"",
         "id":""
     },
-    "map.SE_Wherewolf.name":{
+    "map.SE_Werewolf.name":{
         "en":"Werewolf Hunting Ground",
         "fr":"Terrain de chasse des loups-garous",
         "es":"",
