--- a/Translation/item.json
+++ b/Translation/item.json
@@ -11216,7 +11216,7 @@
         "id":""
     },
     "item.6000.name":{
-        "en":"Initlal Hairstyle (Green)",
+        "en":"Initial Hairstyle (Green)",
         "fr":"Coiffure Initiale (Vert)",
         "es":"",
         "zh-cn":"初始发型(绿)",
@@ -11235,7 +11235,7 @@
         "id":""
     },
     "item.6001.name":{
-        "en":"Initlal Hairstyle (Blue / Blond)",
+        "en":"Initial Hairstyle (Blue / Blond)",
         "fr":"Coiffure Initiale (Bleu / Blond)",
         "es":"",
         "zh-cn":"初始发型(蓝/金)",
@@ -11254,7 +11254,7 @@
         "id":""
     },
     "item.6002.name":{
-        "en":"Initlal Hairstyle (Red)",
+        "en":"Initial Hairstyle (Red)",
         "fr":"Coiffure Initiale (Rouge)",
         "es":"",
         "zh-cn":"初始发型(红)",
@@ -11273,7 +11273,7 @@
         "id":""
     },
     "item.6003.name":{
-        "en":"Initlal Hairstyle (Grey)",
+        "en":"Initial Hairstyle (Grey)",
         "fr":"Coiffure Initiale (Gris)",
         "es":"",
         "zh-cn":"初始发型(灰)",
